--- a/index.html
+++ b/index.html
@@ -16,5 +16,27 @@
 </head>
 <body>
     
+    <!-- header -->
+    <header>
+        <div class="header-nav">
+            <div class="speaker">
+                <i class="fas fa-th"></i>
+                <span>Speaker View</span>
+            </div>
+            <div class="arrow">
+                <i class="fas fa-expand-arrows-alt"></i>
+            </div>
+        </div>
+    </header>
+    <!-- /header -->
+
+    <!-- main -->
+    <main></main>
+    <!-- /main -->
+
+    <!-- footer -->
+    <footer></footer>
+    <!-- /footer -->
+
 </body>
 </html>
