--- a/index.html
+++ b/index.html
@@ -33,66 +33,306 @@
     <!-- main -->
     <main>
         <div class="container">
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
-            <div class="user"></div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>
+            <div class="user">
+                <div class="user-name">
+                    <i class="fas fa-microphone-slash"></i>
+                    <span>Pinco Pallo</span>
+                </div>
+            </div>  
         </div>
     </main>
     <!-- /main -->
