add layout on footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <i class="fas fa-th"></i>
                 <span>Speaker View</span>
             </div>
-            <div class="arrow">
+            <div class="multi-arrows">
                 <i class="fas fa-expand-arrows-alt"></i>
             </div>
         </div>
@@ -33,6 +33,7 @@
     <!-- main -->
     <main>
         <div class="container">
+         <!-- user -->
             <div class="user">
                 <div class="user-name">
                     <i class="fas fa-microphone-slash"></i>
@@ -332,13 +333,43 @@
                     <i class="fas fa-microphone-slash"></i>
                     <span>Pinco Pallo</span>
                 </div>
-            </div>  
+            </div>
+         <!-- /user -->
         </div>
     </main>
     <!-- /main -->
 
     <!-- footer -->
-    <footer></footer>
+    <footer>
+        <!-- left footer -->
+        <div class="left-footer">
+            <div class="microphone">
+                <i class="fas fa-microphone"></i>
+                <i class="fas fa-angle-up"></i>
+                <span>mute</span>
+            </div>
+            <div class="webcam"></div>
+        </div>
+        <!-- /left footer -->
+
+        <!-- center footer -->
+        <div class="center-footer">
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+            <div class="footer-item"></div>
+        </div>
+        <!-- /center footer -->
+
+        <!-- right footer -->
+        <div class="right-footer"></div>
+        <!-- r/ight footer -->
+
+    </footer>
     <!-- /footer -->
 
 </body>
