--- a/index.html
+++ b/index.html
@@ -346,9 +346,13 @@
             <div class="microphone">
                 <i class="fas fa-microphone"></i>
                 <i class="fas fa-angle-up"></i>
-                <span>mute</span>
+                <p>Mute</p>
             </div>
-            <div class="webcam"></div>
+            <div class="webcam">
+                <i class="fas fa-video"></i>
+                <i class="fas fa-angle-up"></i>
+                <p>Stop video</p>
+            </div>
         </div>
         <!-- /left footer -->
 
