center-footer completed

--- a/index.html
+++ b/index.html
@@ -358,14 +358,39 @@
 
         <!-- center footer -->
         <div class="center-footer">
-            <div class="footer-item"></div>
-            <div class="footer-item"></div>
-            <div class="footer-item"></div>
-            <div class="footer-item"></div>
-            <div class="footer-item"></div>
-            <div class="footer-item"></div>
-            <div class="footer-item"></div>
-            <div class="footer-item"></div>
+            <div class="footer-item">
+                <i class="fas fa-user-plus"></i>
+                <p>Invite</p>
+            </div>
+            <div class="footer-item">
+                <i class="fas fa-user-friends"></i>
+                <p>Manage partecipants</p>
+            </div>
+            <div class="footer-item">
+                <i class="fas fa-chart-bar"></i>
+                <p>Polling</p>
+            </div>
+            <div class="footer-item active">
+                <i class="fas fa-share-square"></i>
+                <p>Share screen</p>
+            </div>
+            <div class="footer-item">
+                <i class="fas fa-angle-up"></i>
+                <i class="fas fa-comment"></i>
+                <p>chat</p>
+            </div>
+            <div class="footer-item">
+                <i class="fas fa-record-vinyl"></i>
+                <p>Record</p>
+            </div>
+            <div class="footer-item">
+                <i class="fas fa-th-large"></i>
+                <p>Breakout Rooms</p>
+            </div>
+            <div class="footer-item">
+                <i class="fas fa-ellipsis-h"></i>
+                <p>More</p>
+            </div>
         </div>
         <!-- /center footer -->
 
