--- a/index.html
+++ b/index.html
@@ -395,7 +395,9 @@
         <!-- /center footer -->
 
         <!-- right footer -->
-        <div class="right-footer"></div>
+        <div class="right-footer">
+            <span class="end">End meeting</span>
+        </div>
         <!-- r/ight footer -->
 
     </footer>
